k8s/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: go-web-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: go-web-app

  template:
    metadata:
      labels:
        app: go-web-app

    spec:
      containers:
        - name: go-web-app
          image: yashu2026/go-web-app:b5d7bc6cb6af70cf46b5ec23ed36504daf3ea050
          ports:
            - containerPort: 8080
